@@ -18,6 +18,8 @@ Yang Tse (7 Aug 2008)
   expansion which consists of a single double-quoted string as the result of
   concatenating all of them.
 
+- Skip data type check in DO_CURL_OFF_T_CHECK macro when argument is empty.
+
 - Prevent buildconf from removing 'Makefile' and 'missing' files. This would
   blow away our CVS checked files 'missing' and 'hiper/Makefile'.
 
